[gd_scene load_steps=6 format=3 uid="uid://dpjc2mu8ayptt"]

[ext_resource type="Script" uid="uid://ogn3fa0fsjcw" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://w58oncv8qkcp" path="res://Player/crosshair.gd" id="3_btcbx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hvfyp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l8h54"]

[sub_resource type="LabelSettings" id="LabelSettings_btcbx"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_l8h54")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hvfyp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_l8h54")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="RayCastTerrain" type="RayCast3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.367685, 0, -0.712841)
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.964706, 0, 0, 1)

[node name="DebugShovel" type="CSGBox3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.369236, 0.00461364, -2.21897)
size = Vector3(0.0166016, 0.0273438, 2.98688)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1120.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_btcbx")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS: 144"
label_settings = SubResource("LabelSettings_btcbx")
